--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,55 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  font: 200 10px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 4%;
+}
+
+#smartphones {
+  width: 20%;
+  height: 20%;
+}
+
+.download-app img {
+  width: 20%;
+  height: 20%;
+}
+
+p {
+  font-size: 0.5rem;
+  color: gray;
+}
+
+h1 {
+  font-size: 1rem;
+  color: #06365f;
+}
+
+#instagram-logo {
+  width: 20%;
+  height: 20%;
+}
+
+container > div {
+  width: 50%;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: #1c5380;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.4rem;
+}
+
+span {
+  text-decoration: none;
+  color: gray;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.4rem;
 }
