--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,96 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+.bgtile {
+    background-image: url(/images/bgtile.png);
+    background-repeat: auto;
+    background-size: cover;
+    height: 40vh;
+}
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+}
+.main {
+    top: 10vw;
+    left: 22vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    position: absolute;
+    width: 50%;
+}
+.logo-para {
+    margin-left: 50px;
+}
+.logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.para-background {
+    background-image: url(/images/frame.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.para-background > h3 {
+    color: #06365f;
+    padding: 30px 30px 0px;
+}
+.para-background > p {
+    margin: 30px;
+}
+.badges {
+    display: flex;
+    justify-content: space-around;
+    margin-left: 20px;
+    margin-right: 80px;
+}
+.login-button {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    border: 1px #315f86 solid;
+    box-shadow: 1px 1px #315f86;
+
+    height: 40px;
+    width: fit-content;
+    padding-bottom: 10px;
+    padding-left: 10px;
+}
+.login {
+    color: #dae3ea;
+    padding: 10px;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.login-button div > img {
+    height: 30px;
+    float: left;
+}
+
+footer {
+    position: absolute;
+    bottom: 10vh;
+    right: 35%;
+}
+li {
+    list-style: none;
+    color: #1c5380;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 500;
+    margin-right: 20px;
+}
+ul {
+    display: flex;
+    justify-content: space-between;
+}
+nav {
+    display: flex;
+    text-transform: uppercase;
+    color: #babbbb;
+    font-weight: 400;
+    font-size: 12px;
 }
