--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,75 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background: url("../images/bgtile.png");
+  background-size: 100% 290px;
+  background-repeat: no-repeat;
+  margin-top: 150px;
+}
+
+.main-section {
+  display: flex;
+  flex-direction: row;
+  margin: 12%;
+}
+
+.right-column {
+  margin-left: 120px;
+}
+
+.logo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login-button {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat;
+  border-radius: 3px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 110px;
+  max-height: 35px;
+  color: white;
+  font-weight: bold;
+}
+
+.main-body {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.main-body h1 {
+  color: #06365f;
+  margin: 40px 40px 0px 40px;
+  padding-top: 35px;
+}
+
+.text {
+  margin: 30px 30px 0px 40px;
+}
+
+.download-badge {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin: 20px 40px 0px 40px;
+}
+
+.download-button {
+  margin: 15px 30px 0 0;
+}
+
+li {
+  color: #06365f;
+  display: flex;
+  justify-content: center;
+  font-size: 0.9em;
+}
+
+.copyright {
+  color: rgb(161, 161, 161);
 }
