--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 /*
 Colors to use:
 dark blue: #06365f
@@ -7,4 +12,89 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+header {
+  background-image: url(/images/bgtile.png);
+  position: relative;
+  height: 250px;
+  width: 100vw;
+  margin: 0 auto;
+  
+}
+
+
+.iphone {
+
+  padding: 4em 0;
+  margin: 2%;
+}
+nav {
+display:flex;
+flex-direction: row;
+align-items: center;
+margin: -600px 0 0 350px;  
+}
+a {
+  
+  background-color:rgb(74, 129, 168);
+     color: white;
+     font-size: 1.5em;
+     text-align: center;
+     text-decoration: none;
+
+     padding: 5px ;
+     margin: 30px 46px;
+     border-color: #1c5380;
+     border-style: solid;
+     font-weight:bold;
+     font-size: small;
+     border-radius: 10%;
+}
+
+.text h1 {
+  color: #06365f;
+  width: 80%;
+  text-align:left;
+  
+  
+  
+}
+
+.text {
+  background-image: url("/images/frame.png");
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  text-align:left;
+  width: 50%;
+  margin: -70px 350px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center top;
+  padding: 25px 25px 0 25px;
+  border-radius: 4px;
+
+}
+
+
+ul  {
+  list-style: none;
+  text-align: center;
+  text-transform:uppercase;
+  font-size: small;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+  margin: 5% 2%;
+  display: flex;
+  color: #4e85b1;
+  font-weight:bold;
+  
+}
+
+footer{
+ margin: 15px 25px;
+ padding: 5%;
+
 }
