--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,27 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.blue {
+  display: block;
+  height: 30vh;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat;
+}
+
+.information {
+  display: block;
+  width: 50vw;
+  height: 60vh;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
 }
