--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,95 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+#index {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  position: absolute;
+}
+
+#index > div > img {
+  margin-right: 50px;
+}
+
+#navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 3px;
+  margin-bottom: 15px;
+}
+
+#login {
+  border: 1px solid #1c5380;
+  background: linear-gradient(360deg, #1c5380 0%, #2379b2 100%);
+  border-radius: 3px;
+  padding: 0 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+}
+
+#login > img {
+  margin-right: 10px;
+}
+
+#login > p {
+  display: inline;
+  color: #fff;
+  font-weight: bold;
+}
+
+#info {
+  width: 500px;
+  box-sizing: border-box;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  padding: 40px 50px 0;
+}
+
+#text {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+#text > h1 {
+  color: #06365f;
+  margin: 0;
+}
+
+#download > img:last-child {
+  margin-left: 15px;
+}
+
+footer > ul {
+  margin: 70px 0;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  bottom: 0vh;
+}
+
+footer > ul > li {
+  display: inline;
+  list-style: none;
+  margin: 0 10px;
+  color: #1c5380;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 0.7em;
+}
+
+footer > ul > li:last-child {
+  color: gray;
 }
