--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,15 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   background: url("../images/bgtile.png");
-  background-size: 100% 290px;
+  background-size: 100% 380px;
   background-repeat: no-repeat;
   margin-top: 150px;
 }
@@ -15,11 +22,17 @@ body {
 .main-section {
   display: flex;
   flex-direction: row;
-  margin: 12%;
+  margin-top: 12%;
+  padding: 0 10%;
+  justify-content:space-between;
+  width: 200px;
 }
 
-.right-column {
-  margin-left: 120px;
+.right-side {
+  margin-left: 30px;
+}
+.left-side {
+  margin-left: 150px;
 }
 
 .logo {
@@ -35,16 +48,20 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 110px;
-  max-height: 35px;
+  width: 90px;
+  height: 50px;
   color: white;
   font-weight: bold;
+  background: linear-gradient(to bottom, #6b9ac5, #33608b);
+  border: #265a88 solid thin;
 }
 
 .main-body {
   background-image: url("../images/frame.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-size: 100%;
+   
 }
 
 .main-body h1 {
@@ -55,6 +72,7 @@ body {
 
 .text {
   margin: 30px 30px 0px 40px;
+  font-size: 15px;
 }
 
 .download-badge {
@@ -68,13 +86,25 @@ body {
   margin: 15px 30px 0 0;
 }
 
-li {
-  color: #06365f;
+
+footer {
   display: flex;
   justify-content: center;
+  align-items: center;
   font-size: 0.9em;
+  margin: 50px 0;
+}
+
+footer a {
+  color: #06365f;
+  text-decoration: none;
+  margin-left: 20px;
+  font-weight: bold;
+  font-size: 10px;
+
 }
 
 .copyright {
   color: rgb(161, 161, 161);
+  margin-left: 20px;
 }
