--- a/styles/style.css
+++ b/styles/style.css
@@ -11,18 +11,18 @@ light blue: #1c5380
 }
 
 html {
-  font-size: 10px ;
+  font-size: 10px;
 }
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  width: 100vw ;
+  width: 100vw;
   height: 100vh;
 }
 
 #background {
-  width: 100% ;
+  width: 100%;
   height: 33%;
   position: relative;
 }
@@ -30,42 +30,32 @@ body {
 .background-blue {
   background-color: #1c5380;
   background-image: url("../images/frame.png");
-  background-size: 110% 110%;
-  background-position: center; 
+  background-size: 400% 400%;
+  background-position: center bottom;
 }
 
 #foreground {
-  width: 100vw ;
-  height: 100vh ;
+  width: 100vw;
+  height: 100vh;
   bottom: 0;
   right: 0;
   position: fixed;
   padding: 0 10vw;
 }
 
-.non-main {
-  width: 100%;
-  height: 15vh;
-  z-index: 0;
-}
-
-footer {
-  height: 20vh;
-}
-
 main {
-  width: 100% ;
-  height: 65vh ;
-  display:flex ;
+  width: 100%;
+  height: 65vh;
+  display: flex;
   justify-content: space-between;
+  margin-top: 15vh;
 }
 
 #phones {
   width: 30vw;
   height: 100%;
-  background-color:transparent;
-  position:relative;
-  z-index: 10;
+  background-color: transparent;
+  position: relative;
 }
 
 #phones > img {
@@ -79,8 +69,8 @@ main {
 }
 
 #principal > header {
-  height: 20%; 
-  width: 100% ;
+  height: 20%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -91,13 +81,13 @@ main {
   height: 40px;
 }
 
-#principal > header  input {
+#principal > header input {
   width: 100%;
   height: 100%;
   border: none;
   background-color: transparent;
   background-image: url(../images/home.png);
-  background-position: 10% 50%;  
+  background-position: 10% 50%;
   background-size: initial;
   background-repeat: no-repeat;
   text-align: right;
@@ -106,8 +96,8 @@ main {
 }
 
 #principal > section {
-  height: 80%; 
-  width: 100% ;
+  height: 80%;
+  width: 100%;
   background-color: white;
   border-radius: 1%;
   padding: 10% 10% 0 10%;
@@ -116,23 +106,22 @@ main {
   justify-content: space-between;
 }
 
-#principal > section > h1{
-  color: #06365f ;
-  width: 70% ;
+#principal > section > h1 {
+  color: #06365f;
+  width: 70%;
   font-size: 2.5rem;
   padding-bottom: 1rem;
 }
 
-#principal > section > article > p{
+#principal > section > article > p {
   padding-bottom: 1rem;
   font-size: 1.6rem;
 }
 
-
 .container {
-  width: 100% ;
-  height: 100% ;
-  display: flex ;
+  width: 100%;
+  height: 100%;
+  display: flex;
   justify-content: end;
   flex-direction: column;
   align-items: center;
@@ -148,14 +137,37 @@ main {
 
 #store-button-footer {
   height: 7vh;
+  display: flex;
+  align-items: flex-end;
+  justify-content: left;
 }
 
-.store-button {
-  width: 21vh;
-  height: 100%;
-  background-size: 100% 100%;
-  border: none;
-  background-repeat: no-repeat;
+#store-button-footer > input:first-of-type {
   margin-right: 10%;
-  bottom: 0;
+}
+
+nav {
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bold {
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.blue-text {
+  color: #1c5380;
+}
+
+nav > a {
+  display: block;
+  text-decoration: none;
+  margin: 0 1vw;
+}
+
+nav > p {
+  color: grey;
 }
