--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,3 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
-
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+.gradiente {
+  background-image: linear-gradient(rgb(29, 143, 236), rgb(182, 198, 201));
 }
