--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,146 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+/* ----------------CSS starts here -------------------*/
+
+.container{
+  background-image:url("../images/bgtile.png");
+  background-repeat: repeat-x;
+
+}
+
+section {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  align-items: center;
+  padding-top: 100px;
+}
+
+
+button {
+  background-image: url("../images/bgtile.png");
+  background-repeat:repeat-x;
+  color: white;
+  font-weight: bold;
+  width: 90px;
+  height: 40px;
+  border: 0px;
+  display: flex;
+  vertical-align:baseline;
+  justify-content: space-between;
+  align-items: center;
+  background: linear-gradient(to top, rgba(40, 100, 153, 7), rgb(120, 174, 221));
+  border-width:.5px;
+  border-style:hidden;
+  border-color: whitesmoke;
+}
+
+button img {
+  float: left;
+}
+
+#section-right .logo-body {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#section-right .text-body {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  width: 425px;
+  height: 300px;
+  padding: 40px;
+
+}
+
+h3 {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    width: 76%;
+    font-weight: bolder;
+    color: #06365f;
+}
+
+p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+nav ul { 
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: flex-end;
+  list-style: none;
+  align-items: center;
+  padding-top: 150px;
+  padding-bottom: 20px;
+  
+
+}
+
+nav li {
+  margin-right: 10px;
+
+}
+
+a {
+  color: #06365f;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.patent {
+  font-weight: lighter;
 }
