--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,158 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+}
+
+main {
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  padding-top: 125px;
+
+  display: flex;
+  justify-content: center;
+}
+
+main > div {
+  height: 512px;
+}
+
+main > div + div {
+  width: 100%;
+  max-width: 700px;
+  margin-left: 80px;
+}
+
+.header-logo-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
+}
+
+button {
+  width: 110px;
+  padding: 15px 0;
+  border: 1px solid #1c5380;
+  box-shadow: 1px -1px 5px #1c5380;
+  border-radius: 3px;
+  background-color: #487094;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+button span {
+  color: #fff;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.header-logo-container + div {
+  width: 100%;
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 45px 45px 0;
+}
+
+h1 {
+  width: 325px;
+  color: #06365f;
+  line-height: 38px;
+  margin-bottom: 30px;
+}
+
+p {
+  color: #272727;
+}
+
+p + p {
+  margin-top: 20px;
+}
+
+p > span {
+  font-weight: bold;
+}
+
+.download-links-container {
+  margin-top: 30px;
+}
+
+.download-links-container > a {
+  text-decoration: none;
+}
+
+.download-links-container > a + a {
+  margin-left: 20px;
+}
+
+footer {
+  margin-top: 120px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+footer a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+footer a + a {
+  margin-left: 20px;
+}
+
+footer span {
+  margin-left: 25px;
+  font-weight: bold;
+  color: #c3c3c4;
+  text-transform: uppercase;
+}
+
+@media only screen and (max-width: 1200px) {
+  .header-image-container {
+    display: none;
+  }
+
+  main > div + div {
+    margin-left: 0;
+  }
+
+  main {
+    padding-top: 75px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  footer {
+    margin-top: 50px;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  a {
+    font-size: 20px;
+  }
+
+  footer a + a {
+    margin-top: 20px;
+    margin-left: 0;
+  }
+
+  footer span {
+    margin-left: 0;
+    font-size: 20px;
+    margin-top: 20px;
+  }
 }
