--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,133 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+}
+
+body, html{
+  width:100%;
+}
+
+* body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+main {
+  margin: 0 auto;
+  max-width: 1024px;
+}
+
+.background {
+  background-image: linear-gradient(to top, #1c5380, #316993, #457fa7, #5b96ba, #71aecd);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60%;
+  z-index: -1000;
+}
+
+
+.article {
+  display: flex;
+  justify-content: center;
+  margin: 70px auto 0;
+  max-width: 935px;
+  padding-bottom: 32px;
+  width: 100%;
+}
+
+.article__img {
+  margin: 1em;
+}
+
+.interactions {
+  display: flex;
+  margin-right: 10px;
+  flex-direction: column;
+}
+
+.interactions__img {
+  width: 100%;
+}
+
+.interactions__login {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 1em 2em;
+}
+
+.interactions__login a {
+  border: #1c5380 1px solid;
+  border-radius: 5px;
+  color: white;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 5px;
+  width: 95px;
+  height: 40px;
+  text-decoration: none;
+  background-color: linear-gradient(to top, #1c5380, #316993, #457fa7, #5b96ba, #71aecd);ckground: linear-gradient(360deg, rgba(45,94,134,1) 39%, rgba(75,123,160,1) 100%);
+}
+
+.cta {
+  background-image: url('/images/frame.png');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding: 1em 3em;
+}
+
+.cta h1 {
+  width: 50%;
+  font-size: 1.5rem;
+  line-height: 30px;
+  color: #06365f;
+}
+
+@media only screen and (max-width: 940px) {
+  .cta h1 {
+    width: 80%;
+  }
+}
+
+.download {
+  margin-left: 3em;
+  display: flex;
+  flex-wrap: wrap-reverse;
+}
+
+.download > img {
+  margin-top: .5em;
+  margin-right: 1em;
+}
+
+.footer {
+  margin: 0 auto;
+  max-width: 80%;
+  margin-top: 10px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: .75rem;
+  font-weight: bold;
+}
+
+.footer__copywrite {
+  color: lightgray;
+}
+
+.footer__nav a {
+  margin: 5px;
+  text-decoration: none;
+  align-items: center;
+  color: #1c5380 ;
+}
+
