--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,92 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
 
-body {
+:root {
+  --darkblue: #06365f;
+  --lightblue:#1c5380;
+}
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+html, body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+}
+
+.blue-bg {
+  background-image: linear-gradient(to top, #1c5380, #316993);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 45%;
+  z-index: -1;
+  display: flex;
+  flex-direction: column;
+  padding: 0 50px;
+}
+
+.main {
+  display: flex; 
+  margin: 100px 75px 0px;
+}
+
+.phoneimg {
+  margin-top: 140px;
+  margin-right: 25px;
+}
+
+.text {
+  margin-top: 140px;
+  
+}
+.login-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+  
+}
+
+.login-btn {
+  background-image: linear-gradient(to bottom, #1c5380, #316993);
+  color: #fff;
+  font-size: 1em;
+  padding: 5px;
+  border-style: none;
+  border-radius: 2px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+
+
+.main-container {
+  background-image: url("/images/frame.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  padding: 20px;
+}
+
+h1 {
+  color: var(--darkblue);
+  font-size: 2em;
+}
+
+.download-img{
+margin-right: 30px;;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 50px 50px;
+  padding: 30px;
+}
+
+.footer a {
+  text-decoration: none;
+  color: var(--darkblue);
+  font-weight:bold;
 }
