--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ html, body {
 }
 
 .blue-bg {
-  background-image: linear-gradient(to top, #1c5380, #316993);
+  background-image: linear-gradient(to top, var(--darkblue), var(--lightblue));
   position: absolute;
   top: 0;
   left: 0;
@@ -49,7 +49,7 @@ html, body {
 }
 
 .login-btn {
-  background-image: linear-gradient(to bottom, #1c5380, #316993);
+  background-image: linear-gradient(to bottom, var(--darkblue), var(--lightblue));
   color: #fff;
   font-size: 1em;
   padding: 5px;
