--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@ main {
   top: 0;
   left: 0;
   width: 100%;
-  height: 60%;
+  height: 35%;
   z-index: -1000;
 }
 
@@ -45,7 +45,7 @@ main {
 }
 
 .article__img {
-  margin: 1em;
+  margin: 1rem;
 }
 
 .interactions {
@@ -63,7 +63,7 @@ main {
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
-  margin: 1em 2em;
+  margin: 1rem 2rem;
 }
 
 .interactions__login a {
@@ -84,11 +84,11 @@ main {
   background-image: url('/images/frame.png');
   background-repeat: no-repeat;
   background-size: 100%;
-  padding: 1em 3em;
+  padding: 1rem 3rem;
 }
 
 .cta h1 {
-  width: 50%;
+  width: 60%;
   font-size: 1.5rem;
   line-height: 30px;
   color: #06365f;
@@ -101,14 +101,14 @@ main {
 }
 
 .download {
-  margin-left: 3em;
+  margin-left: 3rem;
   display: flex;
   flex-wrap: wrap-reverse;
 }
 
 .download > img {
-  margin-top: .5em;
-  margin-right: 1em;
+  margin-top: .5rem;
+  margin-right: 1rem;
 }
 
 .footer {
